# smart-nvr-ha-trig

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  coco_classes.py  db.py  main.py  models.py  settings.py  version.py
app/api/: auth.py  cameras.py  clips.py  env_settings.py  events.py  recordings.py  snapshots.py  stats.py  ws.py  zone_samples.py  zones.py
app/events/: mqtt_publisher.py  publisher.py  snapshot_store.py  sqlite_sink.py  ws_broadcaster.py
app/pipeline/: aggregator.py  capture.py  clip_classifier.py  clip_recorder.py  continuous_recorder.py  few_shot_classifier.py  filters.py  frame_bus.py  inference.py  manager.py  overlay.py
app/web/static/: app.css  camera_edit.js  cameras.js  clips.js  dashboard.js  events.js  multiselect.js  settings.js  zone_editor.js
app/web/templates/: base.html  camera_edit.html  cameras.html  clips.html  dashboard.html  events.html  login.html  settings.html
scripts/: bump.sh  dev_run.sh
tests/: conftest.py  test_episode_hysteresis.py  test_publisher_stub.py  test_zone_filter.py
