[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-nvr-ha-trig"
version = "0.1.0"
description = "Lightweight YOLO inference on RTSP cameras with zones, running alongside Frigate, emitting HA-friendly episode events."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "jinja2==3.1.4",
    "shapely==2.0.6",
    "python-multipart==0.0.17",
    "ultralytics==8.3.40",
    "opencv-python-headless==4.10.0.84",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
